<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:id="@+id/cardViewMeeting"

    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/viewColourBar"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#D32626" />

        <TextView
            android:id="@+id/textViewMeetingSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/section"
            android:textColor="@android:color/black"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/textViewMeetingType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingBottom="8dp"
            android:text="@string/meeting_type"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewMeetingStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingBottom="8dp"
            android:text="@string/meeting_start_time"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewMeetingDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingBottom="8dp"
            android:text="@string/meeting_days"
            android:textSize="15sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
