<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    android:orientation="vertical"
    tools:context=".ViewAllClasses">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <ImageButton
            android:id="@+id/btnPreviousTerm"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:contentDescription="@string/previous_term"
            android:foreground="@drawable/ic_baseline_arrow_back_ios_24"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toStartOf="@id/textViewTerm"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewTerm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            app:layout_constraintStart_toEndOf="@id/btnPreviousTerm"
            app:layout_constraintEnd_toStartOf="@id/btnNextTerm"
            android:textSize="34sp" />

        <ImageButton
            android:id="@+id/btnNextTerm"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:contentDescription="@string/next_term"
            android:foreground="@drawable/ic_baseline_arrow_forward_ios_24"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewTerm" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAllCourses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:listitem="@layout/view_all_classes_class_card" />

    <TextView
        android:id="@+id/textViewNoClassesToShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/no_view_all_classes"
        android:textAlignment="center"
        android:textSize="36sp"
        android:visibility="visible" />

</LinearLayout>