<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewClass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.example.theprincipleapp.InfoSection
            android:id="@+id/courseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sectionIcon="@drawable/ic_baseline_text_fields_24"
            app:sectionName="Course Name"
            app:sectionValue="@string/app_name"/>

        <com.example.theprincipleapp.InfoSection
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/courseCode"
            app:sectionName="Course Code"
            app:sectionIcon="@drawable/ic_baseline_123_24"
            app:sectionValue="@string/app_name"/>

        <com.example.theprincipleapp.InfoSection
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/courseDesc"
            app:sectionName="Description"
            app:sectionIcon="@drawable/ic_baseline_format_list_numbered_24"
            app:sectionValue="@string/app_name"/>

        <com.example.theprincipleapp.InfoSection
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/classProf"
            app:sectionName="Professor"
            app:sectionIcon="@drawable/ic_baseline_person_24"
            app:sectionValue="@string/app_name"/>

        <com.example.theprincipleapp.InfoSection
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/classStart"
            app:sectionName="Start Date"
            app:sectionIcon="@drawable/ic_baseline_calendar_today_24"
            app:sectionValue="@string/app_name"/>

        <com.example.theprincipleapp.InfoSection
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/classEnd"
            app:sectionName="End Date"
            app:sectionIcon="@drawable/ic_baseline_alarm_24"
            app:sectionValue="@string/app_name"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <Button
                android:id="@+id/btn_newTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all_tasks"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_newMeeting"/>

            <Button
                android:id="@+id/btn_newMeeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all_meetings"
                app:layout_constraintStart_toEndOf="@+id/btn_newTask"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>